# react-laravel-app

./: README.md  docker-compose.yml
backend/: docker-compose.yml
backend/axum/: .gitignore  Cargo.toml
backend/axum/migration/: Cargo.toml
backend/axum/migration/src/: lib.rs  m20221022_155823_create_task_table.rs
backend/axum/src/: main.rs  router.rs  task.rs  work.rs
backend/axum/src/entity/: mod.rs  prelude.rs  tasks.rs
backend/axum/src/entity/post/: mod.rs  post.rs  prelude.rs
backend/axum/src/entity/task/: mod.rs  prelude.rs
backend/axum/src/infrastructure/repository/: task.rs
backend/axum/src/presentation/controller/: router.rs
backend/axum/src/presentation/dto/: create_task.rs  mod.rs
backend/nestjs/: package.json
frontend/: package.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/Todo/: InputSection.tsx  TodoTable.tsx  index.tsx
frontend/src/hooks/task/: getTasks.tsx  useGet.ts  useGet.tsx  useGetById.ts  useLogicalDelete.ts  usePhysicalDelete.ts  usePost.ts  usePost.tsx  useUpdate.ts
