[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.0-rc.2"
# serde = "1.0.147"
sea-orm = { version = "0.9.3",features=["sqlx-postgres","runtime-tokio-native-tls","macros"]}
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
chrono = "0.4.22"